Added docker-compose and fixed env-example
Added a docker compose to automatically run the server with the
correct commands. You can use docker-compose up -d to start a
server and docker-compose down to remove it.

Env can't have comments on the same line or it breaks the export
in the container.

--- a/.env-example
+++ b/.env-example
@@ -1,14 +1,24 @@
 # This is an example .env file to use with docker-compose
 TZ=America/New_York
-UID=
-PID=
-Debug=false # true or false to enable debug console output
-Private=true # Private?
-Port=30814 # Port to run the server on UDP and TCP
-Cars=1 # Max cars for every player
-MaxPlayers=10 # Maximum Amount of Clients
-Map="/levels/gridmap/info.json" # Default Map
-Name="BeamMP New Server" # Server Name
-Desc="BeamMP Default Description" # Server Description
-use="Resources" # Resource file name
-AuthKey="" # Auth Key
+PUID=
+PGID=
+# true or false to enable debug console output
+Debug=false
+# Private?
+Private=true
+# Port to run the server on UDP and TCP
+Port=30814
+# Max cars for every player
+Cars=1
+# Maximum Amount of Clients
+MaxPlayers=10
+# Default Map
+Map=/levels/gridmap/info.json
+# Server Name
+Name=BeamMP New Server
+# Server Description
+Desc=BeamMP Default Description
+# Resource file name
+use=Resources
+# Auth Key
+AuthKey=
