Updated scripts to more recent docker standards
-Adjusted ignored files.
-Updated dockerfile and entrypoint script to use entrypoint json
method and pass command line arguments to the process.
-Removed overlay user drop to keep things simple
Will update to newer beammp version and build process soon.

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,10 @@
 .env-example
 .editorconfig
 .git
+.gitattributes
+.gitignore
 .cache
-Server.cfg
 Server.log
 Resources/
 Dockerfile.*
+docker-compose.yml
